# RRR_Manipulator

./: .gitmodules  CMakeLists.txt  README.md  package.xml
action/: Fibonaci.action
arduino/servo_control/: servo_control.ino
config/: joint_state_controllers.yaml  trajectory_controllers.yaml
launch/: alexa_control.launch  controller.launch  display.launch  gazebo.launch  sim_complete.launch
meshes/: base_link.STL  gripper_1.STL  gripper_2.STL  gripper_left.STL  gripper_right.STL  link_1.STL  link_2.STL  link_3.STL
rviz/: display.rviz
src/: action_client.py  action_server.py  alexa_interface.py  obj_detect.py  ros_timer.py  rpr_arm_server.py  rrr_arm_server.py
urdf/: rpr_arm.csv  rpr_arm.urdf  rrr_arm.urdf
